--- a/gui/style.css
+++ b/gui/style.css
@@ -1,9 +1,10 @@
-body{
+body
+  {
   background: #000;
   padding-top: 10px;
-}
-
-p{
+  }
+p
+  {
   color: lime;
   font-family: "Courier";  font-size: 20px;
   margin: 10px 0 0 10px;
@@ -11,35 +12,35 @@ p{
   overflow: hidden;
   width: 30em;
   animation: type 4s steps(60, end);
-}
-
-p:nth-child(2){
+  }
+p:nth-child(2)
+  {
   animation: type2 8s steps(60, end);
-}
-
-p a{
+  }
+p a
+  {
   color: lime;
   text-decoration: none;
-}
-
-span{
+  }
+span
+  {
   animation: blink 1s infinite;
-}
-
-@keyframes type{
+  }
+@keyframes type
+  {
   from { width: 0; }
-}
-
-@keyframes type2{
+  }
+@keyframes type2
+  {
   0%{width: 0;}
   50%{width: 0;}
   100%{ width: 100; }
-}
-
-@keyframes blink{
+  }
+@keyframes blink
+  {
   to{opacity: .0;}
-}
-
-::selection{
+  }
+::selection
+  {
   background: black;
-}
+  }
