--- a/gui/style.css
+++ b/gui/style.css
@@ -9,7 +9,8 @@ div.speech
 p
   {
   color: lime;
-  font-family: "Courier";  font-size: 20px;
+  font-family: "Courier";
+  font-size: 20px;
   margin: 10px 0 0 10px;
   white-space: nowrap;
   overflow: hidden;
